# sfrt_optimization

./: README.md  ingest.py  pyproject.toml
csv_ouputs/: A_square_points.csv  A_triangular_points.csv  B_square_points.csv  B_triangular_points.csv
data/: neighborood.pkl  node_data.pkl
helpers/: clique_finder.py
ingest/: dicom_reader.py  parameter_writer.py  relative_grid_placement.py  triangle_grid_placement.py
misc/: dicom_slice_visualizer.py  dicom_tester.py  matrix_cube_optimization.py
models/: adjacency_optimization.py  arc_optimization.py  clique_optimization.py  continuous_adjacency_optimization.py  cube_heuristic.py  dimensional_clique_finder.py  greedy_algorithm.py  heuristic_optimization.py  node_optimization.py  print_results.py  spherical_heuristic.py  warm_start_optimization.py
sfrt_optimal_placement/: Optimal_Points.csv  run_model.py
sfrt_optimal_placement/data/: arc_list.pkl  node_data.pkl
sfrt_optimal_placement/dicom_file/: ignore.txt
sfrt_optimal_placement/helpers/: arc_optimization.py  grid_placement.py  parameter_writer.py
