[tool.poetry]
name = "sfrt_optimization"
version = "0.1.0"
description = ""
authors = ["Grant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
pydicom = "^2.4.4"
gurobipy = "^11.0.3"
plotly = "^5.23.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
